<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nome"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintTop_toBottomOf="@id/inputText"
        app:layout_constraintStart_toStartOf="@id/inputText"/>

    <Button
        android:id="@+id/buttonDoAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Adicionar Nome"
        app:layout_constraintTop_toBottomOf="@id/errorMsg"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNames"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/buttonDoAction"
        app:layout_constraintBottom_toTopOf="@+id/buttonClearList"/>

    <Button
        android:id="@+id/buttonClearList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Limpar"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>